[gd_scene load_steps=12 format=3 uid="uid://dkh45s0jmpji6"]

[ext_resource type="Script" path="res://Scripts/Asteroid.gd" id="1_756xe"]
[ext_resource type="Texture2D" uid="uid://u3q2htngh2l2" path="res://Assets/Asteroids/Asteroid.png" id="2_wqajf"]
[ext_resource type="Texture2D" uid="uid://d1cu2e174er10" path="res://Assets/Asteroids/Asteroid2.png" id="3_ceb1k"]
[ext_resource type="Texture2D" uid="uid://brp0y41n4ommw" path="res://Assets/Asteroids/Asteroid3.png" id="4_e7rf4"]
[ext_resource type="Texture2D" uid="uid://34lfhk4rpprx" path="res://Assets/Asteroids/Asteroid4.png" id="5_wc6w2"]
[ext_resource type="Texture2D" uid="uid://cfd7irioi100p" path="res://Assets/Asteroids/Asteroid5.png" id="6_vo4rv"]
[ext_resource type="Texture2D" uid="uid://g5vqarnlxcau" path="res://Assets/Asteroids/Asteroid6.png" id="7_1vtls"]
[ext_resource type="Texture2D" uid="uid://cl712mwdv4iqb" path="res://Assets/Asteroids/Asteroid7.png" id="8_dslmq"]
[ext_resource type="Texture2D" uid="uid://didbinivwgbdr" path="res://Assets/Asteroids/Asteroid8.png" id="9_t8aed"]
[ext_resource type="Texture2D" uid="uid://d1aolm6eytd6c" path="res://Assets/Asteroids/Asteroid9.png" id="10_s5jn8"]
[ext_resource type="Texture2D" uid="uid://dhqfnpn3nltdj" path="res://Assets/Asteroids/Asteroid10.png" id="11_8ank4"]

[node name="Asteroid" type="Area2D"]
scale = Vector2(0.5, 0.5)
collision_layer = 2
collision_mask = 2
script = ExtResource("1_756xe")

[node name="Sprite2D1" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_wqajf")

[node name="Collision1" type="CollisionPolygon2D" parent="."]
visible = false
position = Vector2(-420, -153)
scale = Vector2(0.5, 0.5)
polygon = PackedVector2Array(741.147, 161.119, 767.328, 167.161, 799.552, 181.259, 827.748, 199.385, 866.014, 215.496, 904.279, 217.51, 958.657, 215.496, 976.783, 219.524, 992.895, 227.58, 1004.98, 239.664, 1013, 256.6, 1011.7, 283, 1001.3, 325, 981.1, 367, 960.1, 399, 928.7, 427, 902.265, 441.063, 874.07, 443.077, 843.86, 437.035, 821.706, 418.909, 807.608, 396.755, 803.58, 386.685, 781.426, 334.322, 771.356, 326.266, 753.23, 312.168, 723.021, 294.042, 694.825, 271.888, 676.699, 249.734, 672.671, 221.538, 682.741, 197.371, 698.853, 173.203, 718.993, 163.133)

[node name="Sprite2D2" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_ceb1k")

[node name="Collision2" type="CollisionPolygon2D" parent="."]
visible = false
scale = Vector2(0.5, 0.5)
polygon = PackedVector2Array(-112, -36, -80, -76, -36, -106, 4, -118, 50, -110, 110, -72, 124, -2, 120, 56, 70, 100, 16, 118, -56, 98, -112, 68)

[node name="Sprite2D3" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_e7rf4")

[node name="Collision3" type="CollisionPolygon2D" parent="."]
visible = false
scale = Vector2(0.5, 0.5)
polygon = PackedVector2Array(-104, -124, -58, -120, 32, -154, 70, -146, 80, -112, 96, -96, 148, -98, 184, -74, 196, -28, 164, 18, 136, 48, 132, 112, 110, 136, 80, 134, 42, 114, -6, 130, -56, 136, -86, 112, -112, 56, -162, 42, -186, 6, -178, -40, -150, -68, -126, -112)

[node name="Sprite2D4" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_wc6w2")

[node name="Collision4" type="CollisionPolygon2D" parent="."]
visible = false
scale = Vector2(0.5, 0.5)
polygon = PackedVector2Array(-112, -114, -144, -84, -160, -28, -152, 44, -136, 78, -70, 112, 12, 128, 94, 116, 148, 80, 176, 28, 168, -28, 130, -46, 38, -44, 4, -68, -46, -110, -70, -120)

[node name="Sprite2D5" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.5, 0.5)
texture = ExtResource("6_vo4rv")

[node name="Collision5" type="CollisionPolygon2D" parent="."]
visible = false
scale = Vector2(0.5, 0.5)
polygon = PackedVector2Array(-280, -32, -246, -68, -130, -68, -88, -74, -36, -144, 8, -148, 32, -138, 54, -108, 98, -108, 210, -158, 260, -156, 290, -106, 280, -42, 246, 18, 186, 72, 114, 76, 64, 130, 6, 158, -50, 132, -112, 62, -212, 54, -260, 40, -280, 2)

[node name="Sprite2D6" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.5, 0.5)
texture = ExtResource("7_1vtls")

[node name="Collision6" type="CollisionPolygon2D" parent="."]
visible = false
scale = Vector2(0.5, 0.5)
polygon = PackedVector2Array(120, -236, 76, -228, 12, -184, -92, 16, -176, 60, -212, 84, -216, 128, -192, 168, -124, 200, 16, 208, 176, 232, 224, 208, 228, 168, 184, 96, 128, 36, 108, -32, 144, -192)

[node name="Sprite2D7" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.5, 0.5)
texture = ExtResource("8_dslmq")

[node name="Collision7" type="CollisionPolygon2D" parent="."]
visible = false
scale = Vector2(0.5, 0.5)
polygon = PackedVector2Array(-144, -108, -164, -48, -172, -12, -228, 32, -236, 112, -196, 168, -152, 176, -120, 156, -96, 108, -60, 120, 8, 140, 76, 108, 108, 60, 204, -16, 236, -68, 244, -108, 212, -152, 136, -180, 80, -172, 32, -144, -36, -128, -96, -132)

[node name="Sprite2D8" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.3, 0.3)
texture = ExtResource("9_t8aed")

[node name="Collision8" type="CollisionPolygon2D" parent="."]
visible = false
scale = Vector2(0.3, 0.3)
polygon = PackedVector2Array(-32, -328, -152, -272, -248, -172, -260, -112, -228, -60, -100, 8, -64, 44, -40, 144, -12, 280, 48, 320, 140, 300, 184, 216, 236, 88, 208, -16, 276, -168, 252, -260, 164, -288, 60, -252, -4, -292)

[node name="Sprite2D9" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.3, 0.3)
texture = ExtResource("10_s5jn8")

[node name="Collision9" type="CollisionPolygon2D" parent="."]
visible = false
scale = Vector2(0.3, 0.3)
polygon = PackedVector2Array(-156, -100, -116, -216, -56, -252, 4, -228, 68, -92, 124, -104, 144, -52, 264, -96, 332, -80, 352, 0, 320, 108, 236, 204, 160, 256, 100, 204, 64, 176, 0, 200, -56, 228, -104, 196, -124, 160, -144, 124, -188, 116, -220, 148, -296, 156, -344, 124, -356, 64, -340, 4, -292, -40, -200, -68)

[node name="Sprite2D10" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.5, 0.5)
texture = ExtResource("11_8ank4")

[node name="Collision10" type="CollisionPolygon2D" parent="."]
visible = false
scale = Vector2(0.5, 0.5)
polygon = PackedVector2Array(-120, -32, -72, -76, -4, -96, 64, -84, 120, -48, 148, 0, 144, 28, 84, 68, -8, 92, -88, 88, -124, 56, -144, 8)
